# jira-commands

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  PLUGIN.md  README.md  SECURITY.md  TUI.md  deny.toml  install.ps1  install.sh  release-please-config.json
.claude-plugin/: README.md  marketplace.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/clawhub-cli/: package-lock.json  package.json
.github/requirements/: ziglang-release.txt
.github/scripts/: refresh_release_readme.py  submit-winget-pr.py  update_scoop_manifest.py
.github/workflows/: cflite_pr.yml  ci.yml  clawhub-publish-jirac.yml  pr-automerge.yml  release-please.yml  release-recover.yml  release-tag.yml  release.yml  security.yml  winget-submit.yml
clawhub/jirac/: SKILL.md
clawhub/jirac/references/: install.md
crates/jira/: CHANGELOG.md  Cargo.toml  README.md
crates/jira-core/: Cargo.toml  README.md
crates/jira-core/src/: adf.rs  auth.rs  client.rs  config.rs  error.rs  lib.rs
crates/jira-core/src/model/: comment.rs  field.rs  issue.rs  link.rs  mod.rs  sprint.rs  worklog.rs
crates/jira-core/tests/: config_auth_priority.rs
crates/jira-mcp/: Cargo.toml  README.md
crates/jira-mcp/src/: app.rs  error.rs  lib.rs  main.rs  models.rs  server.rs
crates/jira-mcp/tests/: mcp_error_mapping.rs
crates/jira/src/: datetime.rs  lib.rs  main.rs  notifications.rs  version_check.rs
crates/jira/src/cli/: api.rs  auth.rs  issue.rs  mcp.rs  mod.rs  plan.rs
crates/jira/src/tui/: app.rs  column.rs  keys.rs  mod.rs  modal.rs  mode.rs  panel.rs  picker.rs  prefs.rs  prompts.rs  render.rs  theme.rs
crates/jira/tests/: version_notice.rs
docs/: CNAME  index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: markdown_adf.rs
openclaw/: CHANGELOG.md  README.md  SKILL.md
packaging/chocolatey/: LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  jirac.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/npm/: README.md  package.json
packaging/npm/lib/: install.js
packaging/scoop/: README.md
packaging/winget/: README.md  jirac.installer.yaml  jirac.locale.en-US.yaml  jirac.yaml
plugin/: CHANGELOG.md  README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/api/: SKILL.md
plugin/skills/attach/: SKILL.md
plugin/skills/batch/: SKILL.md
plugin/skills/bulk-create/: SKILL.md
plugin/skills/bulk-transition/: SKILL.md
plugin/skills/bulk-update/: SKILL.md
plugin/skills/clone-issue/: SKILL.md
plugin/skills/comment/: SKILL.md
plugin/skills/create-issue/: SKILL.md
plugin/skills/delete-issue/: SKILL.md
plugin/skills/jql/: SKILL.md
plugin/skills/list-issues/: SKILL.md
plugin/skills/transition/: SKILL.md
plugin/skills/update-issue/: SKILL.md
plugin/skills/view-issue/: SKILL.md
plugin/skills/worklog/: SKILL.md
scripts/: sync-npm-version.mjs
