[package]
name = "jira-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Jira CLI — API client, auth, model, ADF parser"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
keyring = { version = "3", features = ["apple-native"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
comrak = "0.28"
