[package]
name = "jira-core"
version = "0.7.0" # x-release-please-version
edition = "2021"
description = "Core library for Jira CLI — API client, auth, model, ADF parser"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mulhamna/jira-commands"
homepage = "https://github.com/mulhamna/jira-commands"
keywords = ["jira", "atlassian", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
dirs = "5"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
comrak = "0.28"
mime_guess = "2"
