[package]
name = "jira-mcp"
version = "0.15.0" # x-release-please-version
edition = "2021"
description = "MCP server for Jira — typed Model Context Protocol tools powered by jira-core"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mulhamna/jira-commands"
homepage = "https://github.com/mulhamna/jira-commands"
keywords = ["jira", "mcp", "mcp-server", "atlassian"]
categories = ["command-line-utilities"]

[[bin]]
name = "jirac-mcp"
path = "src/main.rs"

[dependencies]
jira-core = { workspace = true }
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.5.0", features = [
  "client",
  "macros",
  "reqwest",
  "schemars",
  "server",
  "transport-io",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server"
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
wiremock = "0.6"
