[package]
name = "jira-commands"
version = "0.4.1"
edition = "2021"
description = "Jira CLI — terminal client for Atlassian Jira"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mulhamna/jira-commands"
homepage = "https://github.com/mulhamna/jira-commands"
keywords = ["jira", "atlassian", "cli", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "jira"
path = "src/main.rs"

[dependencies]
jira-core = { path = "../jira-core", version = "0.4.0" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
inquire = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
open = "5"
