[package]
name = "jira-commands"
version = "0.10.0" # x-release-please-version
edition = "2021"
description = "Jira CLI — fast terminal client for Atlassian Jira with TUI, Homebrew support, and Claude Code plugin"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mulhamna/jira-commands"
homepage = "https://github.com/mulhamna/jira-commands"
keywords = ["jira", "atlassian", "cli", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "jirac"
path = "src/main.rs"

# Legacy shim — kept for backward compatibility.
# Prints a deprecation warning then runs the same code.
# Will be removed in a future major release.
[[bin]]
name = "jira"
path = "src/main.rs"

[dependencies]
jira-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
inquire = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
open = "5"
